fix: change query to formfield with data validation, change filter where query, add custom file name to prevent overwrite
